src/test/deca/context/invalid/created/unary-minus-string.deca
//Description :
// Moins unaire sur un string
//
// Resultats :
// Erreur

{
    -"Bonjour";
}
